// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextareaField /> Default story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="textarea-field"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--lg textarea-field__label"
        for=":r0:"
      >
        Textarea Field
      </label>
    </div>
    <textarea
      aria-describedby=":r1:"
      aria-label="Text Label"
      class="textarea"
      id=":r0:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note textarea-field__field-note"
        id=":r1:"
      >
        Longer Field description
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenDisabled story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="textarea-field"
  >
    <div
      class="textarea-field__overline textarea-field__overline--disabled"
    >
      <label
        class="label label--lg textarea-field__label textarea-field__label--disabled"
        for=":r6:"
      >
        Textarea Field
      </label>
    </div>
    <textarea
      aria-describedby=":r7:"
      aria-disabled="true"
      class="textarea textarea--disabled"
      disabled=""
      id=":r6:"
      placeholder="Enter long-form text here"
      rows="2"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note field-note--disabled textarea-field__field-note"
        id=":r7:"
      >
        Longer Field description
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenError story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="textarea-field"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--lg textarea-field__label"
        for=":ra:"
      >
        Textarea Field
      </label>
    </div>
    <textarea
      aria-describedby=":rb:"
      class="textarea error"
      id=":ra:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note field-note--error textarea-field__field-note"
        id=":rb:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
          />
        </svg>
        Text should be at least 100 characters
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenNoDefaultValue story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="textarea-field"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--lg textarea-field__label"
        for=":r4:"
      >
        Textarea Field
      </label>
    </div>
    <textarea
      class="textarea"
      id=":r4:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    />
  </div>
</div>
`;

exports[`<TextareaField /> WhenOptional story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="textarea-field"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--lg textarea-field__label"
        for=":rg:"
      >
        Textarea Field
      </label>
      <span
        class="text text--body-sm"
      >
        (Optional)
      </span>
    </div>
    <textarea
      aria-describedby=":rh:"
      class="textarea"
      id=":rg:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note textarea-field__field-note"
        id=":rh:"
      >
        Longer Field description
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenReadOnly story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="textarea-field"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--lg textarea-field__label"
        for=":r8:"
      >
        Textarea Field
      </label>
    </div>
    <textarea
      aria-describedby=":r9:"
      class="textarea"
      id=":r8:"
      placeholder="Enter long-form text here"
      readonly=""
      rows="2"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note textarea-field__field-note"
        id=":r9:"
      >
        Longer Field description
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenRequired story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="textarea-field"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--lg textarea-field__label"
        for=":re:"
      >
        Textarea Field
      </label>
      <span
        class="text text--body-sm"
      >
        (Required)
      </span>
    </div>
    <textarea
      aria-describedby=":rf:"
      class="textarea"
      id=":re:"
      placeholder="Enter long-form text here"
      required=""
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note textarea-field__field-note"
        id=":rf:"
      >
        Longer Field description
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenUsingChildren story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="textarea-field"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--lg textarea-field__label"
        for=":r2:"
      >
        Textarea Field
      </label>
    </div>
    <textarea
      aria-describedby=":r3:"
      class="textarea"
      id=":r2:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
    dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
    praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note textarea-field__field-note"
        id=":r3:"
      >
        Longer Field description
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WhenWarning story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="textarea-field"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--lg textarea-field__label"
        for=":rc:"
      >
        Textarea Field
      </label>
    </div>
    <textarea
      aria-describedby=":rd:"
      class="textarea warning"
      id=":rc:"
      placeholder="Enter long-form text here"
      rows="5"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note field-note--warning textarea-field__field-note"
        id=":rd:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            warning
          </title>
          <path
            d="M1 21L12 2L23 21H1ZM11 15H13V10H11V15ZM12 18C12.2833 18 12.521 17.904 12.713 17.712C12.9043 17.5207 13 17.2833 13 17C13 16.7167 12.9043 16.4793 12.713 16.288C12.521 16.096 12.2833 16 12 16C11.7167 16 11.4793 16.096 11.288 16.288C11.096 16.4793 11 16.7167 11 17C11 17.2833 11.096 17.5207 11.288 17.712C11.4793 17.904 11.7167 18 12 18Z"
          />
        </svg>
        Text should be at least 100 characters
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WithADifferentSize story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="textarea-field"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--lg textarea-field__label"
        for=":ri:"
      >
        Textarea Field
      </label>
    </div>
    <textarea
      aria-describedby=":rj:"
      class="textarea"
      id=":ri:"
      placeholder="Enter long-form text here"
      rows="10"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note textarea-field__field-note"
        id=":rj:"
      >
        Longer Field description
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WithAMaxLength story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="textarea-field"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--lg textarea-field__label"
        for=":rk:"
      >
        Textarea Field
      </label>
    </div>
    <textarea
      aria-describedby=":rl:"
      class="textarea error"
      id=":rk:"
      maxlength="144"
      placeholder="Enter long-form text here"
      required=""
      rows="10"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note field-note--error textarea-field__field-note"
        id=":rl:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
          />
        </svg>
        Longer Field description
      </div>
      <div
        class="textarea-field__character-counter"
      >
        <span
          class="textarea-field--invalid-length"
        >
          202
        </span>
         
        / 
        144
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WithARecommendedLength story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="textarea-field"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--lg textarea-field__label"
        for=":rm:"
      >
        Textarea Field
      </label>
    </div>
    <textarea
      aria-describedby=":rn:"
      class="textarea error"
      id=":rm:"
      placeholder="Enter long-form text here"
      required=""
      rows="10"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note field-note--error textarea-field__field-note"
        id=":rn:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
          />
        </svg>
        Longer Field description
      </div>
      <div
        class="textarea-field__character-counter"
      >
        <span
          class="textarea-field--invalid-length"
        >
          202
        </span>
         
        / 
        144
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextareaField /> WithBothRecommendedAndMaxLengths story renders snapshot 1`] = `
<div
  class="p-8"
>
  <div
    class="textarea-field"
  >
    <div
      class="textarea-field__overline"
    >
      <label
        class="label label--lg textarea-field__label"
        for=":ro:"
      >
        Textarea Field
      </label>
    </div>
    <textarea
      aria-describedby=":rp:"
      class="textarea error"
      id=":ro:"
      maxlength="256"
      placeholder="Enter long-form text here"
      required=""
      rows="10"
      spellcheck="false"
    >
      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id neque nemo
dicta rerum commodi et fugiat quo optio veniam! Ea odio corporis nemo
praesentium, commodi eligendi asperiores quis dolorum porro.
    </textarea>
    <div
      class="textarea-field__footer"
    >
      <div
        class="field-note field-note--error textarea-field__field-note"
        id=":rp:"
      >
        <svg
          class="icon field-note__icon"
          fill="currentColor"
          height="1rem"
          role="img"
          style="--icon-size: 1rem;"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            error
          </title>
          <path
            d="M14.9,3H9.1C8.57,3,8.06,3.21,7.68,3.59l-4.1,4.1C3.21,8.06,3,8.57,3,9.1v5.8c0,0.53,0.21,1.04,0.59,1.41l4.1,4.1 C8.06,20.79,8.57,21,9.1,21h5.8c0.53,0,1.04-0.21,1.41-0.59l4.1-4.1C20.79,15.94,21,15.43,21,14.9V9.1c0-0.53-0.21-1.04-0.59-1.41 l-4.1-4.1C15.94,3.21,15.43,3,14.9,3z M15.54,15.54L15.54,15.54c-0.39,0.39-1.02,0.39-1.41,0L12,13.41l-2.12,2.12 c-0.39,0.39-1.02,0.39-1.41,0l0,0c-0.39-0.39-0.39-1.02,0-1.41L10.59,12L8.46,9.88c-0.39-0.39-0.39-1.02,0-1.41l0,0 c0.39-0.39,1.02-0.39,1.41,0L12,10.59l2.12-2.12c0.39-0.39,1.02-0.39,1.41,0l0,0c0.39,0.39,0.39,1.02,0,1.41L13.41,12l2.12,2.12 C15.93,14.51,15.93,15.15,15.54,15.54z"
          />
        </svg>
        Longer Field description
      </div>
      <div
        class="textarea-field__character-counter"
      >
        <span
          class="textarea-field--invalid-length"
        >
          202
        </span>
         
        / 
        144
      </div>
    </div>
  </div>
</div>
`;
